created stock component

--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ClientApp"
+    }
+  },
+  "defaultProject": "ClientApp",
+  "cli": {
+    "analytics": false
+  }
 }
