--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,27 +12,32 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.2",
-    "@angular/cdk": "^10.2.3",
+    "@angular/cdk": "^10.2.5",
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
     "@angular/core": "~10.0.2",
     "@angular/forms": "~10.0.2",
-    "@angular/material": "^10.2.3",
+    "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
+    "@angular/platform-server": "10.2.0",
     "@angular/router": "~10.0.2",
+    "@nguniversal/module-map-ngfactory-loader": "8.2.6",
+    "aspnet-prerendering": "^3.0.1",
+    "oidc-client": "^1.9.1",
+    "object-path": "^0.11.5",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
     "@angular/cli": "~10.0.1",
     "@angular/compiler-cli": "~10.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0-next.1",
+    "@types/node": "^12.19.0",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
