--- a/ERPProject.csproj
+++ b/ERPProject.csproj
@@ -34,5 +34,9 @@
     <None Include="Pages\_ViewImports.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 
 </Project>
